tests/ui/rfcs/rfc-2396-target_feature-11/issue-108645-target-feature-on-main.stderr
error: `main` function is not allowed to have `#[target_feature]`
  --> $DIR/issue-108645-target-feature-on-main.rs:4:1
   |
LL | fn main() {}
   | ^^^^^^^^^ `main` function is not allowed to have `#[target_feature]`

error: aborting due to 1 previous error

